cambio de apellido

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Luisa Pérez</p>
+        <p>© 2025 Luisa Mahecha</p>
     </footer>
 <script src="js/script.js"></script>
 </body>
