--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Sección sobre mí -->
     <section id="sobre-mi">
         <h2>Sobre mí</h2>
-        <p>Soy especialista en marketing digital, ayudando a marcas a crecer con estrategias efectivas y creativas.</p>
+        <p>Soy especialista en Analisis de datos, ayudando a marcas a crecer con estrategias efectivas y creativas.</p>
     </section>
 
     <!-- Sección portafolio -->
