--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <h1>Luisa Mahecha</h1>
         <nav>
             <ul>
+
                 <li><a href="#sobre-mi">Sobre mí</a></li>
                 <li><a href="#portafolio">Portafolio</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -26,6 +28,7 @@
     <!-- Sección sobre mí -->
     <section id="sobre-mi">
         <h2>Sobre mí</h2>
+        <img src="images/luisa mark 1.jpg" alt="Foto de Luisa" class="foto-circular">
         <p>Soy especialista en Analisis de datos, ayudando a marcas a crecer con estrategias efectivas y creativas.</p>
     </section>
 
@@ -51,7 +54,7 @@
     <!-- Sección contacto -->
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Email: luisa@email.com</p>
+        <p>Email: luisimaso08@gmail.com</p>
     </section>
 
     <footer>
