--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <!-- Sección sobre mí -->
     <section id="sobre-mi">
-        <h2>Sobre mí</h2>
         <img src="images/luisa mark 1.jpg" alt="Foto de Luisa" class="foto-circular">
+         <h2>Sobre mí</h2>
         <p>Soy especialista en Analisis de datos, ayudando a marcas a crecer con estrategias efectivas y creativas.</p>
     </section>
 
@@ -61,5 +61,6 @@
         <p>© 2025 Luisa Mahecha</p>
     </footer>
 <script src="js/script.js"></script>
+<button id="btn-volver-arriba" title="Volver arriba">☝️</button>
 </body>
 </html>
