--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <section id="sobre-mi">
         <img src="images/luisa mark 1.jpg" alt="Foto de Luisa" class="foto-circular">
          <h2>Sobre mí</h2>
-        <p>Soy especialista en Analisis de datos, ayudando a marcas a crecer con estrategias efectivas y creativas.</p>
+         </div>
+        <p>Soy analista de datos con pasión por el marketing digital.</p> 
+            <p>Me encanta convertir información compleja en ideas claras que impulsan a las marcas a crecer.</p>
+            <p>Disfruto creando estrategias efectivas, creativas y basadas en datos que conectan con las personas y generan resultados
+            reales.</p>
+            </div>
     </section>
 
     <!-- Sección portafolio -->
@@ -54,13 +59,13 @@
     <!-- Sección contacto -->
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Email: luisimaso08@gmail.com</p>
+        <p>Email: luisamahecha204@gmail.com</p>
     </section>
 
     <footer>
         <p>© 2025 Luisa Mahecha</p>
     </footer>
-<script src="js/script.js"></script>
 <button id="btn-volver-arriba" title="Volver arriba">☝️</button>
+<script src="js/script.js"></script>
 </body>
 </html>
