--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de Luisa</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;700&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -45,14 +45,27 @@
             <img src="images/proyecto2.jpg" alt="Proyecto 2">
         </div>
     </section>
+    
+<section id="habilidades">
+  <h2>Lo que ofrezco</h2>
+  <ul>
+    <li>Análisis de datos</li>
+    <li>Visualización de datos</li>
+    <li>Estrategias de marketing basados en datos</li>
+    <li>Optimización de campañas digitales</li>
+    <li>Consultoría en toma de decisiones</li>
+  </ul>
+</section>
 
     <!-- Sección servicios -->
     <section id="servicios">
         <h2>Servicios</h2>
         <ul>
-            <li>Estrategia de marketing</li>
-            <li>Gestión de redes sociales</li>
-            <li>Publicidad digital</li>
+            <li>Análisis de Datos: Obtención de insights claros para decisiones estratégicas.</li>
+            <li>Visualización de Datos: Dashboards y reportes dinámicos y fáciles de interpretar.</li>
+            <li>Estrategias de Marketing Basadas en Datos: planes personalizados para aumentar alcance y conversión.</li>
+            <li>Optimización de Campañas Digitales: mejora de rendimiento en redes sociales, SEO y publicidad.</li>
+            <li>Consultoría en Toma de Decisiones: acompañamiento a empresas y emprendedores con foco en crecimiento.</li>
         </ul>
     </section>
 
