--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
 
-                <li><a href="#sobre-mi">Sobre mí</a></li>
-                <li><a href="#portafolio">Portafolio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#sobre-mi">About me</a></li>
+                <li><a href="#portafolio">Service Portfolio</a></li>
+                <li><a href="#servicios">Services</a></li>
+                <li><a href="#contacto">Contact</a></li>
                 
             </ul>
         </nav>
@@ -28,12 +28,12 @@
     <!-- Sección sobre mí -->
     <section id="sobre-mi">
         <img src="images/luisa mark 1.jpg" alt="Foto de Luisa" class="foto-circular">
-         <h2>Sobre mí</h2>
+         <h2>About me</h2>
          </div>
-        <p>Soy analista de datos con pasión por el marketing digital.</p> 
-            <p>Me encanta convertir información compleja en ideas claras que impulsan a las marcas a crecer.</p>
-            <p>Disfruto creando estrategias efectivas, creativas y basadas en datos que conectan con las personas y generan resultados
-            reales.</p>
+        <p>I am a Data Analyst with a passion for digital marketing.</p>
+        <p>I love turning complex information into clear insights that drive brand growth.</p>
+        <p>I enjoy creating effective, creative, and data-driven strategies that connect with people and deliver real results.</p>
+        <p><strong>Certified C1 in English</strong> and <strong>MET exam passed</strong>, which allows me to collaborate in international and multicultural environments.</p>
             </div>
     </section>
 
@@ -49,30 +49,31 @@
 <section id="habilidades">
   <h2>Lo que ofrezco</h2>
   <ul>
-    <li>Análisis de datos</li>
-    <li>Visualización de datos</li>
-    <li>Estrategias de marketing basados en datos</li>
-    <li>Optimización de campañas digitales</li>
-    <li>Consultoría en toma de decisiones</li>
-  </ul>
+  <li>Data analysis</li>
+  <li>Data visualization</li>
+  <li>Data-driven marketing strategies</li>
+  <li>Digital campaign optimization</li>
+  <li>Decision-making consulting</li>
+</ul>
 </section>
 
     <!-- Sección servicios -->
     <section id="servicios">
         <h2>Servicios</h2>
-        <ul>
-            <li>Análisis de Datos: Obtención de insights claros para decisiones estratégicas.</li>
-            <li>Visualización de Datos: Dashboards y reportes dinámicos y fáciles de interpretar.</li>
-            <li>Estrategias de Marketing Basadas en Datos: planes personalizados para aumentar alcance y conversión.</li>
-            <li>Optimización de Campañas Digitales: mejora de rendimiento en redes sociales, SEO y publicidad.</li>
-            <li>Consultoría en Toma de Decisiones: acompañamiento a empresas y emprendedores con foco en crecimiento.</li>
-        </ul>
+    <ul>
+  <li>Data Analysis: extracting clear insights for strategic decisions.</li>
+  <li>Data Visualization: creating dashboards and dynamic, easy-to-read reports.</li>
+  <li>Data-Driven Marketing Strategies: personalized plans to increase reach and conversion.</li>
+  <li>Digital Campaign Optimization: improving performance in social media, SEO, and advertising.</li>
+  <li>Decision-Making Consulting: supporting businesses and entrepreneurs with a growth-oriented approach.</li>
+    </ul>
     </section>
 
     <!-- Sección contacto -->
     <section id="contacto">
         <h2>Contacto</h2>
         <p>Email: luisamahecha204@gmail.com</p>
+        <button id="ayuda-btn" class="ayuda-btn">Contact me</button>
     </section>
 
     <footer>
