--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Sección portafolio -->
     <section id="portafolio">
-        <h2>Proyectos</h2>
+        <h2>Service Portfolio</h2>
         <div class="galeria">
             <img src="images/proyecto1.jpg" alt="Proyecto 1">
             <img src="images/proyecto2.jpg" alt="Proyecto 2">
@@ -47,7 +47,7 @@
     </section>
     
 <section id="habilidades">
-  <h2>Lo que ofrezco</h2>
+  <h2>My skills</h2>
   <ul>
   <li>Data analysis</li>
   <li>Data visualization</li>
@@ -59,7 +59,7 @@
 
     <!-- Sección servicios -->
     <section id="servicios">
-        <h2>Servicios</h2>
+        <h2>Services</h2>
     <ul>
   <li>Data Analysis: extracting clear insights for strategic decisions.</li>
   <li>Data Visualization: creating dashboards and dynamic, easy-to-read reports.</li>
@@ -71,7 +71,7 @@
 
     <!-- Sección contacto -->
     <section id="contacto">
-        <h2>Contacto</h2>
+        <h2>Contact</h2>
         <p>Email: luisamahecha204@gmail.com</p>
         <button id="ayuda-btn" class="ayuda-btn">Contact me</button>
     </section>
