--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <footer>
         <p>© 2025 Luisa Mahecha</p>
     </footer>
-<button id="btn-volver-arriba" title="Volver arriba">☝️</button>
+<button id="btn-volver-arriba" title="Back to top">☝️</button>
 <script src="js/script.js"></script>
 </body>
 </html>
