--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <section id="contacto">
         <h2>Contact</h2>
         <p>Email: luisamahecha204@gmail.com</p>
+         <a href="CV_LuisaMahecha.pdf" download class="btn-cv">download CV</a>
         <button id="ayuda-btn" class="ayuda-btn">Contact me</button>
     </section>
 
