--- a/index.html
+++ b/index.html
@@ -38,13 +38,25 @@
     </section>
 
     <!-- Sección portafolio -->
-    <section id="portafolio">
-        <h2>Service Portfolio</h2>
-        <div class="galeria">
-            <img src="images/proyecto1.jpg" alt="Proyecto 1">
-            <img src="images/proyecto2.jpg" alt="Proyecto 2">
-        </div>
-    </section>
+    <!-- Sección portafolio -->
+<section id="portafolio">
+  <h2>Service Portfolio</h2>
+  <div class="galeria">
+    <div class="proyecto">
+      <img src="images/proyecto 1.jpg" alt="Proyecto 1">
+      <p><strong>Sales Analysis Dashboard</strong><br>
+    Built in Excel using pivot tables and dynamic charts to analyze sales by acquisition channel, city, and gender. 
+    This project demonstrates skills in data visualization, segmentation, and business insights to support decision-making.</p>
+    </div>
+
+    <div class="proyecto">
+      <img src="images/proyecto2.jpg" alt="Proyecto 2">
+      <p><strong>Soon</strong><br>
+      In process</p>
+    </div>
+  </div>
+</section>
+
     
 <section id="habilidades">
   <h2>My skills</h2>
